force-app/main/default/objects/CustomerVisit__c/CustomerVisit__c.object-meta.xml
<CustomObject>
    <label>Customer Visit</label>
    <nameField>
        <displayFormat>Visitor-{000000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>