force-app/main/default/objects/CustomerVisit__c/fields/InTime__c.field-meta.xml
<CustomField>
    <fullName>InTime__c</fullName>
    <label>In Time</label>
    <type>DateTime</type>
</CustomField>