force-app/main/default/objects/CustomerVisit__c/fields/PersonToMeet__c.field-meta.xml
<CustomField>
    <fullName>PersonToMeet__c</fullName>
    <label>Person To Meet</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>John Hanley</fullName>
            </value>
            <value>
                <fullName>Khanh Ngo</fullName>
            </value>
            <value>
                <fullName>Max Rudsten</fullName>
            </value>
            <value>
                <fullName>Tracey Erker</fullName>
            </value>
            <value>
                <fullName>Jess Cosca</fullName>
            </value>
            <value>
                <fullName>Arielle McHenry</fullName>
            </value>
            <value>
                <fullName>Sinatra Wynn</fullName>
            </value>
            <value>
                <fullName>Anthony Revsbech</fullName>
            </value>
            <value>
                <fullName>Alema Hoskins</fullName>
            </value>
            <value>
                <fullName>Colin Brown</fullName>
            </value>
            <value>
                <fullName>Donna Nguyen</fullName>
            </value>
            <value>
                <fullName>Emilia Quinones</fullName>
            </value>
            <value>
                <fullName>Evan McDonnell</fullName>
            </value>
            <value>
                <fullName>Hassan Moore</fullName>
            </value>
            <value>
                <fullName>Isaiah Ramos</fullName>
            </value>
            <value>
                <fullName>James Nguyen</fullName>
            </value>
            <value>
                <fullName>Jeff Ninomiya</fullName>
            </value>
            <value>
                <fullName>Jeremy Scavarda</fullName>
            </value>
            <value>
                <fullName>John Truong</fullName>
            </value>
            <value>
                <fullName>Kofi Incoom</fullName>
            </value>
            <value>
                <fullName>Matt Vaughan</fullName>
            </value>
            <value>
                <fullName>Oscar Medina</fullName>
            </value>
            <value>
                <fullName>Phong Truong</fullName>
            </value>
            <value>
                <fullName>Robert Payne</fullName>
            </value>
            <value>
                <fullName>Scott Casias</fullName>
            </value>
            <value>
                <fullName>Tristen McDorman</fullName>
            </value>
            <value>
                <fullName>Vijay Salem</fullName>
            </value>
            <value>
                <fullName>Albert Clifford Hudson III</fullName>
                <isActive>false</isActive>
                <label>Albert Clifford Hudson III</label>
            </value>
            <value>
                <fullName>Alessandra Nieto</fullName>
                <isActive>false</isActive>
                <label>Alessandra Nieto</label>
            </value>
            <value>
                <fullName>Avi Byer</fullName>
                <isActive>false</isActive>
                <label>Avi Byer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>