force-app/main/default/objects/CustomerVisit__c/fields/ReasonForVisit__c.field-meta.xml
<CustomField>
    <fullName>ReasonForVisit__c</fullName>
    <label>Reason for Visit</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>