force-app/main/default/objects/CustomerVisit__c/fields/VisityType__c.field-meta.xml
<CustomField>
    <fullName>VisityType__c</fullName>
    <label>Visit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor Visit</fullName>
            </value>
            <value>
                <fullName>Supplier Visit</fullName>
            </value>
            <value>
                <fullName>Retailer Visit</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>