force-app/main/default/objects/CustomerVisit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>CompanyName__c</columns>
    <columns>Email__c</columns>
    <columns>PersonToMeet__c</columns>
    <columns>Address__c</columns>
    <columns>ReasonForVisit__c</columns>
    <columns>Phone__c</columns>
    <columns>Website__c</columns>
    <columns>VisityType__c</columns>
    <columns>InTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>